# the-primer-1

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  main.py  pyproject.toml
docs/: architecture.md  contributing.md  domain-models.md  events.md  ports.md  reference-adapters.md  skill-runner-contract.md
examples/adaptive_tutoring_prototype/: README.md  routine.yaml  routine_graph.py  routine_v2.yaml
examples/kg/: abstract_algebra.yaml  abstract_algebra_kg.py  knowledge_graph.template.yaml
examples/policies/: bloom.yaml  modality.yaml
src/capillary_actions_sdk/: __init__.py  events.py  loader.py  session_runner.py  tutor.py  utils.py
src/capillary_actions_sdk/models/: __init__.py  enums.py  learner_interaction.py  learning_actions.py
src/capillary_actions_sdk/ports/: __init__.py  learner_interaction.py  learning_actions.py  platform.py  presentation.py  student_model.py
src/capillary_actions_sdk/reference/: __init__.py  slack_adapter.py
src/primer_core/: interaction.py  orchestrator.py  skills.py
src/primer_core/adapters/: __init__.py
src/primer_core/adapters/capillary/: __init__.py  file_memory_store.py  kb_pgvector.py
src/primer_core/memory/: __init__.py  core.py
src/primer_core/wdfs/: tutor-concept.yaml
src/primer_sdk/: events.py
src/primer_sdk/ports/: learner_interaction.py  learning_actions.py
src/primer_sdk/reference/: slack_adapter.py
src/the_primer/: __init__.py  enums.py  loader.py  models.py  session_runner.py  tutor.py  utils.py
tests/: test_adaptive_tutoring_prototype.py  test_events.py  test_fakes.py  test_memory_core.py  test_models.py  test_models_learner_interaction.py  test_models_learning_actions.py  test_models_presentation.py  test_models_student.py  test_orchestrator.py  test_ports_learner_interaction.py  test_ports_learning_actions.py  test_ports_platform.py  test_ports_presentation.py  test_ports_student.py  test_reference_slack.py  test_skills.py  test_smoke.py
tests/adapters/capillary/: test_file_memory_store.py  test_kb_pgvector.py
